<resources>
    <string name="language_code_english">en</string>
    <string name="language_code_russian">ru</string>
    <string name="app_name">SnapSwap</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">SnapSwap</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Add Post</string>


    <!--    delete-->

    <string name="delete">Delete</string>

    <string name="comm">Comments</string>
    <string name="deleted">Comment deleted</string>
    <string name="error">Error</string>


    <string name="choesePhotoToPost">Chose Photo</string>
    <string name="editdescriptions">Edit</string>
    <string name="email_verification_notification_title">Поддвердите email</string>
    <string name="email_verification_notification_message">Зайдите в почту и подтвердите email</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <!--    edit-->
    <string name="edit_comment">Edit comment</string>
    <string name="save">save</string>
    <string name="sucсessfull">Comment successfully updated</string>
    <string name="error_edit">Update Error</string>
    <string name="can_not_be_empty">can not be empty</string>
    <string name="discrad">discard</string>
    <string name="edit">Edit</string>

    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>

    <!--    profile_card edit-->
    <string name="edit_profile_card">Edit</string>
    <string name="done">Done</string>
    <string name="consel">Cancel</string>

    <!--    chose_photo-->
    <string name="take_Photo">Take Photo</string>
    <string name="choosefromgal">Choose from Gallery</string>
    <string name="profile_pick">Choose your profile picture</string>

    <!--    time-->
    <string name="now">just now</string>
    <string name="min">min later</string>
    <string name="hour">hour later</string>

    <string name="Write_comment">Write comment</string>
    <string name="post_com">Post</string>


    <string name="image_uploaded">"Image uploaded successfully!"</string>
    <string name="publishing">publishing</string>

    <string name="post_count_txt">Post%s</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="if_you_don_t_have_an_account_sign_up_there">If you don\'t have an account Sign up there</string>
    <string name="_0_likes">Likes</string>
    <string name="user_name">User name</string>
    <string name="sign_up">Sign up</string>
    <string name="if_you_have_an_account_sign_in_there">If you have an account Sign In there</string>
    <string name="post">Post</string>
    <string name="caption">Caption</string>
    <string name="search_users">Search users…</string>
    <string name="title_activity_settings">Settings</string>


    <string name="Dark_Mode">Dark_Mode</string>
    <string name="Light_Mode">Light_Mode</string>


    <string name="Rus">Russian</string>
    <string name="Eng">English</string>

    <string name="Theme">Theme</string>
    <string name="Language">Language</string>
    <string name="delete_avatar">Delete</string>
    <string name="welcome_message">Welcome to SnapSwap! Sign in or sign up to start swapping snaps and creating memories</string>
    <string name="discover_the_world_of_snapswap">Discover the World of SnapSwap</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="people_you_may_know">People you may know</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="reset">Password reset email sent to</string>
    <string name="failres">Failed to send password reset email</string>
    <string name="entere">Enter Email</string>
    <string name="enterp">Enter password</string>
    <string name="sss">"Signing in"</string>
    <string name="Incorrect">invalid user data</string>
    <string name="af">"Auth failed</string>
    <string name="resetor">Restore your account</string>
    <string name="delacc">Account deleted</string>
    <string name="alredytaken">This username is already taken, please choose another one</string>
    <string name="checkem">Check your Email</string>
</resources>