<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".StartActivity">


    <TextView
        android:layout_width="282dp"
        android:layout_height="84dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="17sp"
        android:textStyle="bold" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/sign_in"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:id="@+id/sign_up"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_up"/>





</LinearLayout>